[package]
name = "combine_videos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp4 = "0.14.0"
mp4-merge = "0.1.8"
scraper = "0.19.0"

[[bin]]
name = "make_folders"
path = "./src/bin/scrape_offline_to_make_folders.rs"

[[bin]]

name = "create_playlist"
path = "./src/bin/create_playlist.rs"

[[bin]]

name = "arrange_videos"
path = "./src/bin/arrange.rs"
